<resources>
    <string name="DB_NAME">kmu.sqlite</string>
    <string name="DB_VERSION">4</string>
    <string name="DISTANCE_LIMIT">0.5</string>
    <string name="URL_ABOUT_SCHOOL">https://mbms.kmu.edu.tw:443/appws/getAboutSchool</string>
    <string name="URL_ACTIVE_BUS">https://mbms.kmu.edu.tw:443/appws/getActiveBus</string>
    <string name="URL_BEACON_INFO">https://mbms.kmu.edu.tw:443/appws/getBeaconList</string>
    <string name="URL_BIKE_DATA">https://mbms.kmu.edu.tw:443/appws/getKHCBikeInfo</string>
    <string name="URL_BUS_STOP">https://mbms.kmu.edu.tw:443/appws/getStopOfBus</string>
    <string name="URL_CALENDAR">https://mbms.kmu.edu.tw:443/appws/getCalendarEvent</string>
    <string name="URL_CALENDAR_SEARCH">https://mbms.kmu.edu.tw:443/appws/searchCalendarEvent</string>
    <string name="URL_CLASSROOM_LIST">https://mbms.kmu.edu.tw:443/appws/getClassroomList</string>
    <string name="URL_CLASSROOM_USAGE">https://mbms.kmu.edu.tw:443/appws/getClassroomUsage</string>
    <string name="URL_CLASSROOM_USAGE_BYDATE">https://mbms.kmu.edu.tw:443/appws/getClassroomUsageByDate</string>
    <string name="URL_DIGISCHOOL">http://wm.kmu.edu.tw/</string>
    <string name="URL_ENEWS">https://mbms.kmu.edu.tw:443/appws/getEnews</string>
    <string name="URL_ENEWS_LIST">https://mbms.kmu.edu.tw:443/appws/getEnewsList</string>
    <string name="URL_EVL_CLASS">https://mbms.kmu.edu.tw:443/appws/evlClass</string>
    <string name="URL_EVL_FILL">https://mbms.kmu.edu.tw:443/appws/evlQuFill</string>
    <string name="URL_EVL_PUSHLOG">https://mbms.kmu.edu.tw:443/appws/evlPushLog</string>
    <string name="URL_EVL_QUESTION">https://mbms.kmu.edu.tw:443/appws/evlQuestion</string>
    <string name="URL_EVL_STUFILL">https://mbms.kmu.edu.tw:443/appws/evlStuQfcFill</string>
    <string name="URL_EVL_STUQFC">https://mbms.kmu.edu.tw:443/appws/evlStuQfc</string>
    <string name="URL_EVL_TA_CLASS">https://mbms.kmu.edu.tw:443/appws/evl/teaf/semList</string>
    <string name="URL_EVL_TA_COURSE">https://mbms.kmu.edu.tw:443/appws/evl/teaf/cour</string>
    <string name="URL_EVL_TA_COURSE_DETAIL">https://mbms.kmu.edu.tw:443/appws/evl/teaf/courDetail</string>
    <string name="URL_EVL_TA_STAT">https://mbms.kmu.edu.tw:443/appws/evl/teaf/stat</string>
    <string name="URL_EVL_TA_STAT_DETAIL">https://mbms.kmu.edu.tw:443/appws/evl/teaf/statDetail</string>
    <string name="URL_GALLERY">https://mbms.kmu.edu.tw:443/appws/getGallery</string>
    <string name="URL_GOODSOFT">https://mbms.kmu.edu.tw:443/appws/getGoodSoftware</string>
    <string name="URL_IMAGE">https://mbms.kmu.edu.tw:443/KmuMan/img.serv?imgID=</string>
    <string name="URL_IMAGE_1">http://mbms.kmu.edu.tw:8080/KmuMan/img.serv?imgID=</string>
    <string name="URL_IRS_CURRENT">https://mbms.kmu.edu.tw:443/appws/irsCurrent</string>
    <string name="URL_IRS_CURRENT_CLASS">https://mbms.kmu.edu.tw:443/appws/irsCurrentClass</string>
    <string name="URL_IRS_CURRENT_CLASS_BY_ROOM">https://mbms.kmu.edu.tw:443/appws/irsClassByRoom</string>
    <string name="URL_IRS_CURRENT_TEACHER_CLASS">https://mbms.kmu.edu.tw:443/appws/irsCurrentTeacherClass</string>
    <string name="URL_IRS_MQTTSEND">https://mbms.kmu.edu.tw:443/appws/mqttSend</string>
    <string name="URL_IRS_PAPERFILL">https://mbms.kmu.edu.tw:443/appws/irsPaperFill</string>
    <string name="URL_IRS_STU_ABNORMAL">https://mbms.kmu.edu.tw/appws/irs/stu/abnormal</string>
    <string name="URL_IRS_STU_APPLOGIN">https://mbms.kmu.edu.tw:443/appws/irs/stu/applogin</string>
    <string name="URL_IRS_STU_ASKLIST">https://mbms.kmu.edu.tw:443/appws/irs/stu/askList</string>
    <string name="URL_IRS_STU_CLASS">https://mbms.kmu.edu.tw:443/appws/irs/stu/class</string>
    <string name="URL_IRS_STU_CURRENT_QU">https://mbms.kmu.edu.tw:443/appws/irs/stu/currentQu</string>
    <string name="URL_IRS_STU_EXAM_DETAIL">https://mbms.kmu.edu.tw:443/appws/irs/stu/examDetail</string>
    <string name="URL_IRS_STU_QALIST">https://mbms.kmu.edu.tw:443/appws/irs/stu/qaList</string>
    <string name="URL_IRS_TA_BT_CLASSROOM">https://mbms.kmu.edu.tw:443/appws/irs/teaf/btClassRoom</string>
    <string name="URL_IRS_TA_CREATE_QU">https://mbms.kmu.edu.tw:443/appws/irs/teaf/createQu</string>
    <string name="URL_IRS_TA_EX_POOL_LIST">https://mbms.kmu.edu.tw:443/appws/irs/teaf/exPoolList</string>
    <string name="URL_IRS_TA_EX_POOL_SIGNLE">https://mbms.kmu.edu.tw:443/appws/irs/teaf/exPoolSingle</string>
    <string name="URL_IRS_TA_POOL_NORMAL">https://mbms.kmu.edu.tw:443/appws/irs/teaf/poolNormal</string>
    <string name="URL_IRS_TA_POOL_PUBLIC">https://mbms.kmu.edu.tw:443/appws/irs/teaf/poolPublic</string>
    <string name="URL_IRS_TA_POOL_TYPE_LIST">https://mbms.kmu.edu.tw:443/appws/irs/teaf/poolTypeList</string>
    <string name="URL_IRS_TA_REPLY">https://mbms.kmu.edu.tw:443/appws/irs/teaf/replyList</string>
    <string name="URL_IRS_TA_REPLY_EDIT">https://mbms.kmu.edu.tw:443/appws/irs/teaf/replyEdit</string>
    <string name="URL_IRS_TA_SEQ_LIST">https://mbms.kmu.edu.tw:443/appws/irs/teaf/seqList</string>
    <string name="URL_IRS_TA_STU_REPLY">https://mbms.kmu.edu.tw:443/appws/irs/teaf/stuAnsList</string>
    <string name="URL_IRS_TA_WEB_LOGIN">https://mbms.kmu.edu.tw:443/appws/irs/teaf/webLogin</string>
    <string name="URL_LIB">http://mtoread.kmu.edu.tw/webpac</string>
    <string name="URL_MSG">https://wapp.kmu.edu.tw/sms/sms.php</string>
    <string name="URL_MYCLASS">https://mbms.kmu.edu.tw:443/appws/getMyClassList</string>
    <string name="URL_MYCLASS_DETAIL">https://mbms.kmu.edu.tw:443/appws/getClassDetail</string>
    <string name="URL_MYKMU">http://mb.kmu.edu.tw</string>
    <string name="URL_MYKMU_LOGIN">http://mb.kmu.edu.tw/loginstu.php</string>
    <string name="URL_MYSCORE_HIS">https://mbms.kmu.edu.tw:443/appws/getMyScoreHistory</string>
    <string name="URL_MYSCORE_SEM">https://mbms.kmu.edu.tw:443/appws/getMyAllSem</string>
    <string name="URL_NEWS">https://mbms.kmu.edu.tw:443/appws/getNewsList</string>
    <string name="URL_POI">https://mbms.kmu.edu.tw:443/appws/getMapPoi</string>
    <string name="URL_QUESTIONNAIRE">https://mbms.kmu.edu.tw:443/appws/getValidQuestionnaire</string>
    <string name="URL_SCHOOL_SYSTEM">http://mb.kmu.edu.tw/index.php?pno=maca</string>
    <string name="URL_SCHOOL_VIDEO">http://podcast.kmu.edu.tw</string>
    <string name="URL_SCORE">http://mb.kmu.edu.tw/maca/macam0004.php</string>
    <string name="URL_SECURITY_DATA">https://mbms.kmu.edu.tw:443/appws/getSecurityData</string>
    <string name="URL_SYSTEM_DATA">https://mbms.kmu.edu.tw:443/appws/getSysVersion</string>
    <string name="URL_TBL_ACT_EXAM_DETAIL">https://etbl.kmu.edu.tw/tblapi/tbl/act/examDetail</string>
    <string name="URL_TBL_ACT_GROUP">https://etbl.kmu.edu.tw/tblapi/tbl/act/myGroup</string>
    <string name="URL_TBL_ACT_QALIST">https://etbl.kmu.edu.tw/tblapi/tbl/act/qaList</string>
    <string name="URL_TBL_ACT_TPLIST">https://etbl.kmu.edu.tw/tblapi/tbl/act/tpList</string>
    <string name="URL_TBL_SERVER_TIME">https://etbl.kmu.edu.tw/tblapi/currentServerTime</string>
    <string name="URL_TBL_STU_BLOCKTP">https://etbl.kmu.edu.tw/tblapi/tbl/stu/blocktp</string>
    <string name="URL_TBL_STU_CLASS">https://etbl.kmu.edu.tw/tblapi/tbl/stu/conoList</string>
    <string name="URL_TBL_STU_EXAM_DETAIL">https://etbl.kmu.edu.tw/tblapi/tbl/stu/examDetail</string>
    <string name="URL_TBL_STU_GRAT_AFTER_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/afterQu</string>
    <string name="URL_TBL_STU_GRAT_ANS_FINAL_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/ansFinal</string>
    <string name="URL_TBL_STU_GRAT_ANS_PREVIEW">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/previewQu</string>
    <string name="URL_TBL_STU_GRAT_ANS_QU_EX">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/ansQuEx</string>
    <string name="URL_TBL_STU_GRAT_FIRST_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/firstQu</string>
    <string name="URL_TBL_STU_GRAT_NEXT_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/nextQu</string>
    <string name="URL_TBL_STU_GRAT_PREV_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/prevQu</string>
    <string name="URL_TBL_STU_GRAT_RO_PREVIEW_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/grat/roPreviewQu</string>
    <string name="URL_TBL_STU_GROUP">https://etbl.kmu.edu.tw/tblapi/tbl/stu/myGroup</string>
    <string name="URL_TBL_STU_IRAT_AFTER_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/irat/afterQu</string>
    <string name="URL_TBL_STU_IRAT_ANS_FINAL_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/irat/ansFinal</string>
    <string name="URL_TBL_STU_IRAT_ANS_PREVIEW">https://etbl.kmu.edu.tw/tblapi/tbl/stu/irat/previewQu</string>
    <string name="URL_TBL_STU_IRAT_FIRST_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/irat/firstQu</string>
    <string name="URL_TBL_STU_IRAT_PREV_QU">https://etbl.kmu.edu.tw/tblapi/tbl/stu/irat/prevQu</string>
    <string name="URL_TBL_STU_QALIST">https://etbl.kmu.edu.tw/tblapi/tbl/stu/qaList</string>
    <string name="URL_TBL_STU_TPLIST">https://etbl.kmu.edu.tw/tblapi/tbl/stu/tpList</string>
    <string name="URL_TEST_SCHEDULE">http://mb.kmu.edu.tw/maca/macam0005.php</string>
    <string name="URL_UPDATEMACHINE">https://mbms.kmu.edu.tw:443/appws/updateMachine</string>
    <string name="URL_VERIFY">https://mbms.kmu.edu.tw:443/appws/verify</string>
    <string name="URL_VERSION">https://mbms.kmu.edu.tw/appws/getAndroidVer</string>
    <string name="URL_WAC_TA_GROW_HIS">https://mbms.kmu.edu.tw/appws/wac/teaf/growHistory</string>
    <string name="URL_WAC_TA_GROW_YEAR">https://mbms.kmu.edu.tw/appws/wac/teaf/growYear</string>
    <string name="URL_WAC_TA_HR">https://mbms.kmu.edu.tw/appws/wac/teaf/hr</string>
    <string name="URL_WAC_TA_MIDALERT">https://mbms.kmu.edu.tw/appws/wac/teaf/midAlert</string>
    <string name="URL_WAC_TA_PROG">https://mbms.kmu.edu.tw/appws/wac/teaf/prog</string>
    <string name="URL_WAC_TA_REMIT">https://mbms.kmu.edu.tw/appws/wac/teaf/remit</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="icon_title_news">最新消息</string>
    <string name="irs_add_row">新增一列</string>
    <string name="irs_delete_row">刪除一列</string>
    <string name="irs_hint_answer">請輸入答案</string>
    <string name="irs_hint_stu_qu">請輸入提問內容</string>
    <string name="irs_multiple_mode">多題連答</string>
    <string name="irs_quick_mode">快問快答</string>
    <string name="irs_student_msg">學生發問訊息</string>
    <string name="mykmu_icon_title1">成績查詢</string>
    <string name="mykmu_icon_title2">課表查詢</string>
    <string name="mykmu_icon_title3">場地查詢</string>
    <string name="mykmu_icon_title4">電子信箱</string>
    <string name="mykmu_icon_title5">雲端硬碟</string>
    <string name="mykmu_icon_title6">教學評量</string>
    <string name="mykmu_icon_title7">IRS</string>
    <string name="mykmu_icon_title8">意見回饋</string>
    <string name="setting_title_authentication">使用者帳號</string>
    <string name="setting_title_clear_cache">清除快取</string>
    <string name="setting_title_gallery_cache">清除暫存資料</string>
    <string name="setting_title_login">使用者帳號</string>
    <string name="setting_title_notification">通知</string>
    <string name="system_msg_Submit">送出</string>
    <string name="system_msg_anonymous">匿名</string>
    <string name="system_msg_sendQu">提問</string>
    <string name="traffic_icon_title1">如何來本校</string>
    <string name="traffic_icon_title2">公車資訊</string>
    <string name="traffic_icon_title3">高雄市公共腳踏車</string>
    <string name="traffic_icon_title4">附院交通車</string>
</resources>