<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:background="@drawable/list_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/tbLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true">
        <ImageView android:gravity="center" android:layout_gravity="center" android:id="@id/title" android:background="@drawable/traffic_title" android:layout_width="140.0dip" android:layout_height="60.0dip" android:layout_marginTop="5.0dip" android:scaleType="fitXY" />
        <LinearLayout android:id="@id/tableRow1" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginTop="5.0dip">
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:id="@id/btnIcon1" android:background="@drawable/traffic_icon1" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_centerHorizontal="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_icon_title1" android:layout_below="@id/btnIcon1" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:id="@id/btnIcon2" android:background="@drawable/traffic_icon2" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_centerHorizontal="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_icon_title2" android:layout_below="@id/btnIcon2" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:id="@id/btnIcon3" android:background="@drawable/traffic_icon3" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_centerHorizontal="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_icon_title3" android:layout_below="@id/btnIcon3" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:id="@id/btnIcon4" android:background="@drawable/traffic_icon4" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_centerHorizontal="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_icon_title4" android:layout_below="@id/btnIcon4" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:id="@id/progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:progressBarStyle" />
</RelativeLayout>